# a

./: OVERVIEW.md  build.gradle  settings.gradle
.github/workflows/: build.yml  main.yml
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: QiyuApi.h
app/src/main/cpp/Jerk_Estimation/: Jerk_Estimation.cpp  Jerk_Estimation.h
app/src/main/java/alvr/client/: VRActivity.java
qiyu-alvr-main/: LOCAL_BUILD.md  README.md  build.sh  gradle.properties
qiyu-alvr-main/app/: CMakeLists.txt
qiyu-alvr-main/app/src/main/cpp/: QYRefCount.h  QYRenderTarget.cpp  QYRenderTarget.h  QYUtil.h  QiyuApiDef.h  cpp_main.cpp
qiyu-alvr-main/app/src/main/cpp/Hand_Trajectory_Prediction/: Hand_Trajectory_Prediction.cpp  Hand_Trajectory_Prediction.h
qiyu-alvr-main/app/src/main/cpp/Jerk_Estimation/: rtwtypes.h
qiyu-alvr-main/reference/: CRASH_DIAGNOSIS.md  FULL_AUDIT.md  QIYU_CLIENT_V20141_PLAN.md
qiyu-alvr-main/reference/hallychou/cpp/: QYUtil.cpp
qiyu-alvr-main/tools/: elf_needed.py
reference/: ON_DEVICE_LOGGING.md  QIYU_BRIDGE_COMPARE.md
reference/hallychou/cpp/: cpp_main.cpp
tools/: extract_jni.py
